XWIKI-10915: Use a monospace font when displaying textarea content in wiki mode.
(cherry picked from commit 68c9b7044ccdb8387cf5768b0857ac49eac489f9)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/forms.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/forms.less
@@ -25,6 +25,7 @@ input[type="checkbox"]:extend(.checkbox all) {
 textarea {
   height: auto;
   max-width: 100%; /* Prevent resizing beyond the visible area in modern browsers */
+  font-family: @font-family-monospace;
 }
 
 .placeholder(@color: @text-muted);
