[Misc] Better comment
(cherry picked from commit e8f0aba40e97e9a8f15bddd349c714ad7cb2a2ad)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/ie-all.css
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/ie-all.css
@@ -1,9 +1,10 @@
-/* Fix XWIKI-10664 */
-.gwt-TabPanelBottom{
+/* Fix a rendering bug with the panels layout and the WYSIWYG editor, on IE 9
+ (see: http://jira.xwiki.org/browse/XWIKI-10664). */
+.gwt-TabPanelBottom {
   margin-right: -4px;
 }
 
-/* XWIKI-10940 */
-.breadcrumb > li{
+/* Fix a rendering bug with the breadcrumb on IE 8 (see: http://jira.xwiki.org/browse/XWIKI-10940). */
+.breadcrumb > li {
   display: inline;
 }
