XWIKI-10866: New password warnings overlap.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/forms.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/forms.less
@@ -105,3 +105,8 @@ select[size="0"], select[size="1"] {
 .xwiki-form-listclass {
   display: block;
 }
+
+/* Validation messages do not have the place to be displayed at the right of the input field, because the width of the fields is 100%. */
+.LV_validation_message {
+  display: block;
+}
