--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/quicksearch.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/quicksearch.vm
@@ -8,7 +8,7 @@
         <input type="text" name="text" class="form-control" placeholder="$services.localization.render('panels.search.inputText')" id="headerglobalsearchinput" />
         <span class="input-group-btn">
           <button type="submit" class="btn btn-primary">
-            <span class="glyphicon glyphicon-search"></span>
+            <span class="glyphicon glyphicon-search"></span><span class="sr-only">$services.localization.render('panels.search.submit')</span>
           </button>
         </span>
       </div>
