XWIKI-10994: The grip for the scrollbar of the TreeView is not centered

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/misc.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/misc.less
@@ -91,6 +91,9 @@
     td {
       vertical-align: baseline;
     }
+    .vScrollThumb td, .vScrollThumbOver td, #isc_4 td {
+      vertical-align: middle; // Center grip in the middle of the scrollbar
+    }
     #isc_4 { // Scrollbar area
       background-image: -ms-linear-gradient(left, #f5f5f5 0%, #e8e8e9 50%, #d7d9da 50%, #caccce 82%, #c0c2c4 100%); // IE10
       border: 1px solid #ababab; // IE10
