--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/macros.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/macros.vm
@@ -215,6 +215,100 @@ $xwiki.getUserName("xwiki:${username}")
 
 
 ###
+###    displayUserProfile
+###
+### Display the profile of a user with an image
+###
+### @param username The name of the user to be displayed
+###
+#macro(displayUserProfile $username)
+  #set ($userReference = $services.model.resolveDocument($username))
+  #getUserAvatarURL($userReference $avatarURL 30)
+  <li class="user">
+    <div class="user-avatar-wrapper">
+      ## The string returned by XWiki#getUserName() is XML encoded.
+      <img src="$escapetool.xml($avatarURL.url)" class="icon"
+      alt="$xwiki.getUserName($userName, false)" />
+    </div>
+    <div class="user-name">$xwiki.getUserName($username)</div>
+    <div>
+      <span class="user-alias">$escapetool.xml($userReference.name)</span>
+      ## Display the wiki only for local users.
+      #if ($userReference.wikiReference.name != $xcontext.getMainWikiName())
+        <span class="user-wiki">$escapetool.xml($userReference.wikiReference.name)</
+      #end
+    </div>
+  </li>
+#end
+
+
+###
+###    displayGroupProfile
+###
+### Display the profile of a group with an image
+###
+### @param groupname The name of the group to be displayed
+###
+#macro(displayGroupProfile $groupname)
+  #set ($groupReference = $services.model.resolveDocument($groupname))
+  #set ($grouptitle = $xwiki.getDocument($groupReference).plainTitle)
+  #if ("$!grouptitle" == '')
+    #set ($grouptitle = $groupReference.name)
+  #end
+  <li class="user">
+    <div class="user-avatar-wrapper">
+      #getUserAvatarURL($groupReference $avatarURL 30)
+      <img src="$escapetool.xml($avatarURL.url)" class="icon"
+        alt="$escapetool.xml($groupName)" />
+    </div>
+    <div class="user-name">
+      <a href="$escapetool.xml($xwiki.getURL($groupReference))">$escapetool.xml($grouptitle)</a>
+    </div>
+    <div>
+      <span class="user-alias">$escapetool.xml($groupReference.name)</span>
+      ## Display the wiki only for local groups.
+      #if ($groupReference.wikiReference.name != $xcontext.getMainWikiName())
+        <span class="user-wiki">$escapetool.xml($groupReference.wikiReference.name)</span>
+      #end
+    </div>
+  </li>
+#end
+
+
+###
+###    displayUsersProfiles
+###
+### Display the profiles of a list of users
+###
+### @param usernames A list of name of the users to be displayed
+###
+#macro(displayUsersProfiles $usernames)
+  #set ($discard = $xwiki.ssfx.use('uicomponents/widgets/userpicker/userPicker.css'))
+  <ul class="users">
+    #foreach($username in $usernames)
+      #displayUserProfile($username)
+    #end
+  </ul>
+#end
+
+
+###
+###    displayGroupsProfiles
+###
+### Display the profiles of a list of groups
+###
+### @param groupnames A list of name of the groups to be displayed
+###
+#macro(displayGroupsProfiles $groupames)
+  #set ($discard = $xwiki.ssfx.use('uicomponents/widgets/userpicker/userPicker.css', true))
+  <ul class="users">
+    #foreach ($groupname in $groupames)
+      #displayGroupProfile($groupname)
+    #end
+  </ul>
+#end
+
+###
 ###    useravatar
 ###
 ### Display the avatar of a user, or a standard image if the user has no avatar
