Simplify numbers of macros and extend their functionality

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/displayer_groups.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/displayer_groups.vm
@@ -21,7 +21,7 @@
     #end
   #end
   #if ($selectedGroups.size() > 0)
-    #displayGroupsProfiles($selectedGroups)
+    #displayGroup($selectedGroups)
   #end
 #elseif ($type == 'hidden')
   #set($id = $escapetool.xml("${prefix}${name}"))
