--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/displayer_users.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/displayer_users.vm
@@ -22,7 +22,7 @@
     #end
   #end
   #if ($selectedUsers.size() > 0)
-    #displayUsersProfiles($selectedUsers)
+    #displayUser($selectedUsers)
   #end
 #elseif ($type == 'hidden')
   #set($id = $escapetool.xml("${prefix}${name}"))
