--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/macros.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/macros.vm
@@ -215,98 +215,94 @@ $xwiki.getUserName("xwiki:${username}")
 
 
 ###
-###    displayUserProfile
+###    displayUser
 ###
-### Display the profile of a user with an image
+### Display the profile of a user (or a list of users) with an image
 ###
-### @param username The name of the user to be displayed
+### @param arg Could be either a string, a reference or a list of them
 ###
-#macro(displayUserProfile $username)
-  #set ($userReference = $services.model.resolveDocument($username))
-  #getUserAvatarURL($userReference $avatarURL 30)
-  <li class="user">
-    <div class="user-avatar-wrapper">
-      ## The string returned by XWiki#getUserName() is XML encoded.
-      <img src="$escapetool.xml($avatarURL.url)" class="icon"
-      alt="$xwiki.getUserName($userName, false)" />
-    </div>
-    <div class="user-name">$xwiki.getUserName($username)</div>
-    <div>
-      <span class="user-alias">$escapetool.xml($userReference.name)</span>
-      ## Display the wiki only for local users.
-      #if ($userReference.wikiReference.name != $xcontext.getMainWikiName())
-        <span class="user-wiki">$escapetool.xml($userReference.wikiReference.name)</
-      #end
-    </div>
-  </li>
-#end
-
-
-###
-###    displayGroupProfile
-###
-### Display the profile of a group with an image
-###
-### @param groupname The name of the group to be displayed
-###
-#macro(displayGroupProfile $groupname)
-  #set ($groupReference = $services.model.resolveDocument($groupname))
-  #set ($grouptitle = $xwiki.getDocument($groupReference).plainTitle)
-  #if ("$!grouptitle" == '')
-    #set ($grouptitle = $groupReference.name)
-  #end
-  <li class="user">
-    <div class="user-avatar-wrapper">
-      #getUserAvatarURL($groupReference $avatarURL 30)
-      <img src="$escapetool.xml($avatarURL.url)" class="icon"
-        alt="$escapetool.xml($groupName)" />
-    </div>
-    <div class="user-name">
-      <a href="$escapetool.xml($xwiki.getURL($groupReference))">$escapetool.xml($grouptitle)</a>
-    </div>
-    <div>
-      <span class="user-alias">$escapetool.xml($groupReference.name)</span>
-      ## Display the wiki only for local groups.
-      #if ($groupReference.wikiReference.name != $xcontext.getMainWikiName())
-        <span class="user-wiki">$escapetool.xml($groupReference.wikiReference.name)</span>
-      #end
-    </div>
-  </li>
-#end
-
-
-###
-###    displayUsersProfiles
-###
-### Display the profiles of a list of users
-###
-### @param usernames A list of name of the users to be displayed
-###
-#macro(displayUsersProfiles $usernames)
+#macro(displayUser $arg)
   #set ($discard = $xwiki.ssfx.use('uicomponents/widgets/userpicker/userPicker.css'))
+  #if ($arg.class.name == "java.util.ArrayList")
+    #set ($userslist = $arg)
+  #else
+    #set ($userslist = [$arg])
+  #end
   <ul class="users">
-    #foreach($username in $usernames)
-      #displayUserProfile($username)
+    #foreach($user in $userslist)
+      #if ($user.class.name == "org.xwiki.model.reference.DocumentReference")
+        #set ($userreference = $user)
+      #else
+        #set ($userreference = $services.model.resolveDocument($user))
+      #end
+      #set ($username = ${userreference.name})
+      #getUserAvatarURL($userreference $avatarURL 30)
+      <li class="user">
+       <div class="user-avatar-wrapper">
+         ## The string returned by XWiki#getUserName() is XML encoded.
+         <img src="$escapetool.xml($avatarURL.url)" class="icon"
+           alt="$xwiki.getUserName("XWiki.${username}", false)" />
+      </div>
+      <div class="user-name">$xwiki.getUserName("XWiki.${username}")</div>
+        <div>
+          <span class="user-alias">$escapetool.xml($userreference.name)</span>
+          ## Display the wiki only for local users.
+          #if ($userreference.wikiReference.name != $xcontext.getMainWikiName())
+            <span class="user-wiki">$escapetool.xml($userreference.wikiReference.name)</span>
+          #end
+        </div>
+      </li>
     #end
   </ul>
 #end
 
 
 ###
-###    displayGroupsProfiles
+###    displayGroup
 ###
-### Display the profiles of a list of groups
+### Display the profile of a group (or a list of groups) with an image
 ###
-### @param groupnames A list of name of the groups to be displayed
+### @param arg Could be either a string, a reference or a list of them
 ###
-#macro(displayGroupsProfiles $groupames)
+#macro(displayGroup $arg)
   #set ($discard = $xwiki.ssfx.use('uicomponents/widgets/userpicker/userPicker.css', true))
+  #if ($arg.class.name == "java.util.ArrayList")
+    #set ($groupslist = $arg)
+  #else
+    #set ($groupslist = [$arg])
+  #end
   <ul class="users">
-    #foreach ($groupname in $groupames)
-      #displayGroupProfile($groupname)
-    #end
+    #foreach ($group in $groupslist)
+      #if ($group.class.name == "org.xwiki.model.reference.DocumentReference")
+        #set ($groupreference = $group)
+      #else
+        #set ($groupreference = $services.model.resolveDocument($group))
+      #end
+      #set ($grouptitle = $xwiki.getDocument($groupreference).plainTitle)
+      #if ("$!grouptitle" == '')
+        #set ($grouptitle = $groupreference.name)
+      #end
+      <li class="user">
+        <div class="user-avatar-wrapper">
+          #getUserAvatarURL($groupreference $avatarURL 30)
+          <img src="$escapetool.xml($avatarURL.url)" class="icon"
+            alt="$escapetool.xml($grouptitle)" />
+        </div>
+        <div class="user-name">
+          <a href="$escapetool.xml($xwiki.getURL($groupreference))">$escapetool.xml($grouptitle)</a>
+        </div>
+    <div>
+    <span class="user-alias">$escapetool.xml($groupreference.name)</span>
+      ## Display the wiki only for local groups.
+      #if ($groupreference.wikiReference.name != $xcontext.getMainWikiName())
+        <span class="user-wiki">$escapetool.xml($groupreference.wikiReference.name)</span>
+      #end
+    </div>
+  </li>
+  #end
   </ul>
 #end
+
 
 ###
 ###    useravatar
