--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/macros.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/macros.vm
@@ -215,97 +215,92 @@ $xwiki.getUserName("xwiki:${username}")
 
 
 ###
-###    usersprofile
+###    displayUser
 ###
-### Display the profile of a user with a standard image if the user has an avatar
+### Display the profile of a user (or a list of users) with an image
 ###
-### @param usersName The name of the users to be displayed
+### @param arg Could be either a string, a reference or a list of them
 ###
-#macro(displayUsersProfiles $usersName)
-  #set ($discard = $xwiki.ssfx.use('uicomponents/widgets/userpicker/userPicker.css', true))
-  <ul class="users">
-  #foreach ($user in $usersName)
-    #displayUserProfile($user)
+#macro(displayUser $arg)
+  #set ($discard = $xwiki.ssfx.use('uicomponents/widgets/userpicker/userPicker.css'))
+  #if ($arg.class.name == "java.util.ArrayList")
+    #set ($userslist = $arg)
+  #else
+    #set ($userslist = [$arg])
   #end
-  </ul>
-#end
-
-
-###
-###    groupsprofile
-###
-### Display the profile of a group with a standard image if the group has an avatar
-###
-### @param groupsName The name of the users to be displayed
-###
-#macro(displayGroupsProfiles $groupsName)
-  #set ($discard = $xwiki.ssfx.use('uicomponents/widgets/userpicker/userPicker.css', true))
   <ul class="users">
-  #foreach ($group in $groupsName)
-    #displayGroupProfile($group)
-  #end
-  </ul>
-#end
-
-
-###
-###    userprofile
-###
-### Display the profile of a user with an image if the user has an avatar
-###
-### @param userName The name of the user to be displayed
-###
-#macro(displayUserProfile $userName)
-  #set ($userReference = $services.model.resolveDocument($userName))
-  #getUserAvatarURL($userReference $avatarURL 30)
-  <li class="user">
-    <div class="user-avatar-wrapper">
-      ## The string returned by XWiki#getUserName() is XML encoded.
-      <img src="$escapetool.xml($avatarURL.url)" class="icon"
-        alt="$xwiki.getUserName($userName, false)" />
-    </div>
-    <div class="user-name">$xwiki.getUserName($userName)</div>
-    <div>
-      <span class="user-alias">$escapetool.xml($userReference.name)</span>
-      ## Display the wiki only for local users.
-      #if ($userReference.wikiReference.name != $xcontext.getMainWikiName())
-        <span class="user-wiki">$escapetool.xml($userReference.wikiReference.name)</span>
+    #foreach($user in $userslist)
+      #if ($user.class.name == "org.xwiki.model.reference.DocumentReference")
+        #set ($userreference = $user)
+      #else
+        #set ($userreference = $services.model.resolveDocument($user))
       #end
-    </div>
-  </li>
+      #set ($username = ${userreference.name})
+      #getUserAvatarURL($userreference $avatarURL 30)
+      <li class="user">
+       <div class="user-avatar-wrapper">
+         ## The string returned by XWiki#getUserName() is XML encoded.
+         <img src="$escapetool.xml($avatarURL.url)" class="icon"
+           alt="$xwiki.getUserName("XWiki.${username}", false)" />
+      </div>
+      <div class="user-name">$xwiki.getUserName("XWiki.${username}")</div>
+        <div>
+          <span class="user-alias">$escapetool.xml($userreference.name)</span>
+          ## Display the wiki only for local users.
+          #if ($userreference.wikiReference.name != $xcontext.getMainWikiName())
+            <span class="user-wiki">$escapetool.xml($userreference.wikiReference.name)</span>
+          #end
+        </div>
+      </li>
+    #end
+  </ul>
 #end
 
 
 ###
-###    groupprofile
+###    displayGroup
 ###
-### Display the profile of a group with an image if the user has an avatar
+### Display the profile of a group (or a list of groups) with an image
 ###
-### @param groupName The name of the group to be displayed
+### @param arg Could be either a string, a reference or a list of them
 ###
-#macro(displayGroupProfile $group)
-  #set ($groupReference = $services.model.resolveDocument($group))
-  #set ($groupName = $xwiki.getDocument($groupReference).plainTitle)
-  #if ("$!groupName" == '')
-    #set ($groupName = $groupReference.name)
+#macro(displayGroup $arg)
+  #set ($discard = $xwiki.ssfx.use('uicomponents/widgets/userpicker/userPicker.css', true))
+  #if ($arg.class.name == "java.util.ArrayList")
+    #set ($groupslist = $arg)
+  #else
+    #set ($groupslist = [$arg])
   #end
-  <li class="user">
-    <div class="user-avatar-wrapper">
-      #getUserAvatarURL($groupReference $avatarURL 30)
-      <img src="$escapetool.xml($avatarURL.url)" class="icon"
-        alt="$escapetool.xml($groupName)" />
-    </div>
-    <div class="user-name">
-      <a href="$escapetool.xml($xwiki.getURL($groupReference))">$escapetool.xml($groupName)</a>
-    </div>
+  <ul class="users">
+    #foreach ($group in $groupslist)
+      #if ($group.class.name == "org.xwiki.model.reference.DocumentReference")
+        #set ($groupreference = $group)
+      #else
+        #set ($groupreference = $services.model.resolveDocument($group))
+      #end
+      #set ($grouptitle = $xwiki.getDocument($groupreference).plainTitle)
+      #if ("$!grouptitle" == '')
+        #set ($grouptitle = $groupreference.name)
+      #end
+      <li class="user">
+        <div class="user-avatar-wrapper">
+          #getUserAvatarURL($groupreference $avatarURL 30)
+          <img src="$escapetool.xml($avatarURL.url)" class="icon"
+            alt="$escapetool.xml($grouptitle)" />
+        </div>
+        <div class="user-name">
+          <a href="$escapetool.xml($xwiki.getURL($groupreference))">$escapetool.xml($grouptitle)</a>
+        </div>
     <div>
-      <span class="user-alias">$escapetool.xml($groupReference.name)</span>
+    <span class="user-alias">$escapetool.xml($groupreference.name)</span>
       ## Display the wiki only for local groups.
-      #if ($groupReference.wikiReference.name != $xcontext.getMainWikiName())
-        <span class="user-wiki">$escapetool.xml($groupReference.wikiReference.name)</span>
+      #if ($groupreference.wikiReference.name != $xcontext.getMainWikiName())
+        <span class="user-wiki">$escapetool.xml($groupreference.wikiReference.name)</span>
       #end
     </div>
   </li>
+  #end
+  </ul>
 #end
 
 
