--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus_create.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus_create.vm
@@ -9,16 +9,16 @@
 #set ($displayCreateWiki = $isWikiAPIAvailable && $isWikiUIAvailable && $hasCreateWiki)
 #set ($displayCreateSubmenu = $hasCreateSpace || $hasCreatePage || $displayCreateWiki)
 #if ($displayCreateSubmenu)
-  #xwikicreatemenuentrystart('' $services.localization.render('core.menu.create') 'tmCreate' 'hasIcon' 'plus')
+  #xwikisplitbuttonentrystart($doc.getURL('create') $services.localization.render('core.menu.create') 'tmCreate' 'btn-success hasIcon' 'plus')
   #if ($displayCreateWiki)
     #set ($createWikiDocReference = $services.model.createDocumentReference('xwiki', 'WikiManager', 'CreateWiki'))
-    #submenuitem("$xwiki.getURL($createWikiDocReference)" $services.localization.render('core.menu.create.wiki') 'tmCreateWiki', '', 'globe')
+    #submenuitem($xwiki.getURL($createWikiDocReference) $services.localization.render('core.menu.create.wiki') 'tmCreateWiki', '', 'globe')
   #end
   #if ($hasCreateSpace)
-    #submenuitem("$doc.getURL('create', 'tocreate=space')" $services.localization.render('core.menu.create.space') 'tmCreateSpace', '', 'folder-open')
+    #submenuitem($doc.getURL('create', 'tocreate=space') $services.localization.render('core.menu.create.space') 'tmCreateSpace', '', 'folder-open')
   #end
   #if ($hasCreatePage)
-    #submenuitem("$doc.getURL('create')" $services.localization.render('core.menu.create.page') 'tmCreatePage', '', 'file')
+    #submenuitem($doc.getURL('create') $services.localization.render('core.menu.create.page') 'tmCreatePage', '', 'file')
     ## Only display the Office Importer menu action if the Office Importer application is installed
     #set ($officeImporterMainDocument = $xwiki.getDocument('XWiki.OfficeImporter'))
     #if ("$!{officeImporterMainDocument.isNew()}" == 'false')
@@ -26,5 +26,5 @@
       #submenuitem($officeImporterMainDocument.getURL('view', "&amp;parent=$!{escapetool.url($doc.fullName)}") $services.localization.render('core.menu.create.pageFromOffice') 'tmCreatePageFromOffice', '', 'import')
     #end
   #end
-  #xwikicreatemenuentryend()
+  #xwikibuttonentryend()
 #end
