--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/macros.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/macros.vm
@@ -223,32 +223,31 @@ $xwiki.getUserName("xwiki:${username}")
 ###
 #macro(displayUser $arg)
   #set ($discard = $xwiki.ssfx.use('uicomponents/widgets/userpicker/userPicker.css'))
-  #if ($arg.class.name == "java.util.ArrayList")
-    #set ($userslist = $arg)
+  #if ($arg.iterator())
+    #set ($usersList = $arg)
   #else
-    #set ($userslist = [$arg])
+    #set ($usersList = [$arg])
   #end
   <ul class="users">
-    #foreach($user in $userslist)
-      #if ($user.class.name == "org.xwiki.model.reference.DocumentReference")
-        #set ($userreference = $user)
-      #else
-        #set ($userreference = $services.model.resolveDocument($user))
+    #foreach($user in $usersList)
+      #set ($userReference = $user.extractReference('DOCUMENT'))
+      #if (!$userReference)
+        #set ($userReference = $services.model.resolveDocument($user, 'explicit', $xcontext.userReference))
       #end
-      #set ($username = ${userreference.name})
-      #getUserAvatarURL($userreference $avatarURL 30)
+      #set ($userName = ${userReference.name})
+      #getUserAvatarURL($userReference $avatarURL 30)
       <li class="user">
        <div class="user-avatar-wrapper">
          ## The string returned by XWiki#getUserName() is XML encoded.
-         <img src="$escapetool.xml($avatarURL.url)" class="icon"
-           alt="$xwiki.getUserName("XWiki.${username}", false)" />
+         <img src="${escapetool.xml($avatarURL.url)}" class="icon"
+           alt="${xwiki.getUserName("XWiki.${userName}", false)}" />
       </div>
-      <div class="user-name">$xwiki.getUserName("XWiki.${username}")</div>
+      <div class="user-name">${xwiki.getUserName("XWiki.${userName}")}</div>
         <div>
-          <span class="user-alias">$escapetool.xml($userreference.name)</span>
+          <span class="user-alias">${escapetool.xml($userReference.name)}</span>
           ## Display the wiki only for local users.
-          #if ($userreference.wikiReference.name != $xcontext.getMainWikiName())
-            <span class="user-wiki">$escapetool.xml($userreference.wikiReference.name)</span>
+          #if ($userReference.wikiReference.name != $xcontext.getMainWikiName())
+            <span class="user-wiki">${escapetool.xml($userReference.wikiReference.name)}</span>
           #end
         </div>
       </li>
@@ -266,36 +265,35 @@ $xwiki.getUserName("xwiki:${username}")
 ###
 #macro(displayGroup $arg)
   #set ($discard = $xwiki.ssfx.use('uicomponents/widgets/userpicker/userPicker.css', true))
-  #if ($arg.class.name == "java.util.ArrayList")
-    #set ($groupslist = $arg)
+  #if ($arg.iterator())
+    #set ($groupsList = $arg)
   #else
-    #set ($groupslist = [$arg])
+    #set ($groupsList = [$arg])
   #end
   <ul class="users">
-    #foreach ($group in $groupslist)
-      #if ($group.class.name == "org.xwiki.model.reference.DocumentReference")
-        #set ($groupreference = $group)
-      #else
-        #set ($groupreference = $services.model.resolveDocument($group))
+    #foreach ($group in $groupsList)
+      #set ($groupReference = $group.extractReference('DOCUMENT'))
+      #if (!$groupReference)
+        #set ($groupReference = $services.model.resolveDocument($group, 'explicit', $xcontext.userReference))
       #end
-      #set ($grouptitle = $xwiki.getDocument($groupreference).plainTitle)
-      #if ("$!grouptitle" == '')
-        #set ($grouptitle = $groupreference.name)
+      #set ($groupTitle = $xwiki.getDocument($groupReference).plainTitle)
+      #if ("$!groupTitle" == '')
+        #set ($groupTitle = $groupReference.name)
       #end
       <li class="user">
         <div class="user-avatar-wrapper">
-          #getUserAvatarURL($groupreference $avatarURL 30)
-          <img src="$escapetool.xml($avatarURL.url)" class="icon"
-            alt="$escapetool.xml($grouptitle)" />
+          #getUserAvatarURL($groupReference $avatarURL 30)
+          <img src="${escapetool.xml($avatarURL.url)}" class="icon"
+            alt="${escapetool.xml($groupTitle)}" />
         </div>
         <div class="user-name">
-          <a href="$escapetool.xml($xwiki.getURL($groupreference))">$escapetool.xml($grouptitle)</a>
+          <a href="${escapetool.xml($xwiki.getURL($groupReference))}">${escapetool.xml($groupTitle)}</a>
         </div>
     <div>
-    <span class="user-alias">$escapetool.xml($groupreference.name)</span>
+    <span class="user-alias">${escapetool.xml($groupReference.name)}</span>
       ## Display the wiki only for local groups.
-      #if ($groupreference.wikiReference.name != $xcontext.getMainWikiName())
-        <span class="user-wiki">$escapetool.xml($groupreference.wikiReference.name)</span>
+      #if ($groupReference.wikiReference.name != $xcontext.getMainWikiName())
+        <span class="user-wiki">${escapetool.xml($groupReference.wikiReference.name)}</span>
       #end
     </div>
   </li>
