--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/getusers.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/getusers.vm
@@ -73,8 +73,8 @@ $response.setContentType("application/x-json")
    {"username"      : "$!{escapetool.javascript($user.name)}", 
     "fullname"      : "$!{escapetool.javascript($user.fullName)}",
     "wikiname"      : "$!{escapetool.javascript($wikiname)}",
-    "firstname"     : "$!{escapetool.javascript($user.getObject('XWiki.XWikiUsers').get('first_name'))}", 
-    "lastname"      : "$!{escapetool.javascript($user.getObject('XWiki.XWikiUsers').get('last_name'))}",
+    "firstname"     : "$!{escapetool.javascript($user.getObject('XWiki.XWikiUsers').getValue('first_name'))}",
+    "lastname"      : "$!{escapetool.javascript($user.getObject('XWiki.XWikiUsers').getValue('last_name'))}",
     "userurl"       : "$xwiki.getURL($user.fullName)",
     "usersaveurl"   : "$user.getURL("save")",
     "userinlineurl" : "$user.getURL("edit", "xpage=edituser")",
