--- a/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.cfg.vm
+++ b/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.cfg.vm
@@ -552,7 +552,7 @@ xwiki.defaultskin=$xwikiCfgDefaultSkin
 
 #-# The default base for skins that don't specify a base skin. This is also the last place where a skin file is searched
 #-# if not found in the more specific skins.
-xwiki.defaultbaseskin=$xwikiCfgDefaultBaseSkin
+xwiki.defaultbaseskin=$!xwikiCfgDefaultBaseSkin
 
 #-# Defines whether title handling should be using the compatibility mode or not. When the compatibility
 #-# mode is active, if the document's content first header (level 1 or level 2) matches the document's title
