--- a/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.properties.vm
+++ b/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.properties.vm
@@ -286,6 +286,7 @@ rendering.transformations = $xwikiRenderingTransformations
 #-#   velocity.tools = jsontool = org.xwiki.velocity.tools.JSONTool
 #-#   velocity.tools = urltool = org.xwiki.velocity.tools.URLTool
 #-#   velocity.tools = cookietool = org.apache.velocity.tools.view.CookieTool
+#-#   velocity.tools = exceptiontool = org.apache.commons.lang3.exception.ExceptionUtils
 
 #-# [Since 2.0M1]
 #-# Velocity configuration properties. The format is
