--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/contentview.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/contentview.vm
@@ -5,20 +5,22 @@
 ## Compute the content to display 
 ## -------------------------------
 ## Honor the syntax if it's passed in the request.
-#set($outputSyntax = $xwiki.getAvailableRendererSyntax($request.outputSyntax, $request.outputSyntaxVersion))
-#if ($outputSyntax)
-  ## If the passed syntax is not an HTML-compatible syntax we need to HTML-escape it so that it can be 
-  ## displayed fine in HTML (since at the point this vm file is called we're already inside an HTML page with
-  ## panels on the side, header, etc).
-  #set($syntaxType = $outputSyntax.type.toIdString())
-  #if (($syntaxType == "xhtml") || ($syntaxType == "html"))
-    #set ($renderedContent = $tdoc.getRenderedContent($outputSyntax))
+#try()
+  #set($outputSyntax = $xwiki.getAvailableRendererSyntax($request.outputSyntax, $request.outputSyntaxVersion))
+  #if ($outputSyntax)
+    ## If the passed syntax is not an HTML-compatible syntax we need to HTML-escape it so that it can be
+    ## displayed fine in HTML (since at the point this vm file is called we're already inside an HTML page with
+    ## panels on the side, header, etc).
+    #set($syntaxType = $outputSyntax.type.toIdString())
+    #if (($syntaxType == "xhtml") || ($syntaxType == "html"))
+      #set ($renderedContent = $tdoc.getRenderedContent($outputSyntax))
+    #else
+      ## Make sure to print correctly the result when it's not HTML
+      #set ($renderedContent = "<pre>$escapetool.html($tdoc.getRenderedContent($outputSyntax))</pre>")
+    #end
   #else
-    ## Make sure to print correctly the result when it's not HTML
-    #set ($renderedContent = "<pre>$escapetool.html($tdoc.getRenderedContent($outputSyntax))</pre>")
+    #set ($renderedContent = $tdoc.getRenderedContent())
   #end
-#else
-  #set ($renderedContent = $tdoc.getRenderedContent())
 #end
 ## ----------------------------------------------------------------------------
 ## Compute title to display and modify rendered content accordingly.
@@ -51,7 +53,11 @@
   ## Display the rendered content
   ## ----------------------------
   <div id="xwikicontent">
-  $renderedContent
+    #if ("$!exception" != '')
+      #displayException($exception)
+    #else
+      $renderedContent
+    #end
   </div>
 </div>
 ## -----------------------------------------------------------------------------------
