--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/macros.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/macros.vm
@@ -2533,9 +2533,23 @@ Recursive title display detected!##
 #end
 
 ###
-###    Glyph Icon
+### Glyph Icon
 ###
 ### @param iconName The name of the icon to display, without the glyphicon prefix (eg: 'globe')
 #macro(glyphicon $iconName)
 #if("$!iconName"!='')<span class="glyphicon glyphicon-${iconName}"></span>#end
+#end
+
+###
+### Displays an exception.
+###
+### @param exception The exception to format for displaying
+#macro(displayException $exception)
+  <div class="xwikirenderingerror" title="Read technical information related to this error" style="cursor: pointer;">
+    Unexpected error: Failed to render content. Contact your administrator or
+    <a href="http://jira.xwiki.org">report the issue</a>. Click this box to get technical details.
+  </div>
+  <div class="xwikirenderingerrordescription hidden">
+    <pre>$exceptiontool.getStackTrace($exception)</pre>
+  </div>
 #end
