XWIKI-11076: Code macro doesn't display content in monospace in Flamingo.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/general.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/general.less
@@ -46,3 +46,9 @@ table {
   max-width: 50px;
   max-height: 50px;
 }
+
+// Code =======================================================================
+.code, .code pre, .code *  {
+  font-family: @font-family-monospace;
+  white-space: pre;
+}
