XWIKI-11081: Cannot change the logo on Flamingo Themes.
* Also fix the fact that the current logo was not selected in the logo input field.

(cherry picked from commit f1c310caf219fc758e904ca122e817ea96c4d060)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/companylogo.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/companylogo.vm
@@ -8,8 +8,13 @@
   #set($themeDocFullName = 'ColorThemes.DefaultColorTheme')
 #end
 #set($themeDoc = $xwiki.getDocument($themeDocFullName))
-#set($themeObj = $themeDoc.getObject('ColorThemes.ColorThemeClass'))
-#set($logoname = $themeObj.getProperty('logoImage').value)
+#set($themeObj = $themeDoc.getObject('FlamingoThemesCode.ThemeClass'))
+#if($themeObj)
+  #set($logoname = $themeObj.getValue('logo'))
+#else
+  #set($themeObj = $themeDoc.getObject('ColorThemes.ColorThemeClass'))
+  #set($logoname = $themeObj.getValue('logoImage'))
+#end
 #if("$!{logoname}" != '')
   #set($logourl = $themeDoc.getAttachmentURL($logoname))
 #else
