--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/javascript.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/javascript.vm
@@ -69,9 +69,26 @@ $xwiki.jsfx.use('js/scriptaculous/effects.js', true)##
 <script type="text/javascript" src="$xwiki.getSkinFile("js/xwiki/markerScript.js", false)" defer="defer"></script>
 <script type="text/javascript">
 // <![CDATA[
+## Requirejs will automatically add a ".js" suffix if the generated URL doesn't contain a "?". It happens that we
+## don't generate a URL with "?" when we export in HTML for example. In this case we remove the ".js" suffix since
+## requirejs will add one...
+## Note that we cannot do this generically in the webjars module when exporting in HTML because the webjars module
+## provide generic URLs and they don't all go through requirejs...
+## Note that this comment and code below are not correctly indentend voluntarily in order to generate nicely formatted
+## code at runtime!
+#macro(removeJsSuffix $url)#if (!$url.contains('?'))$stringtool.removeEnd($url, '.js'))#else$url#{end}#end
+##
+## Start the requirejs config.
+##
 require.config({
   ## see: http://requirejs.org/docs/jquery.html#noconflictmap to see why this works.
-  paths: { 'jquery': "$xwiki.getSkinFile('js/amd/')jquery" },
+## We handle the ability to disable the minification, by choosing the file extension to add to the script paths.
+#if($request.minify == 'false')
+  #set($jsExtension = '.js')
+#else
+  #set($jsExtension = '.min.js')
+#end
+  paths: { 'jquery': '#removeJsSuffix($services.webjars.url("jquery/1.11.1/jquery${jsExtension}"))' },
   map: {
     '*': { 'jquery': 'jQueryNoConflict' },
     'jQueryNoConflict': { 'jquery': 'jquery' }
