--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/javascript.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/javascript.vm
@@ -76,7 +76,12 @@ $xwiki.jsfx.use('js/scriptaculous/effects.js', true)##
 ## provide generic URLs and they don't all go through requirejs...
 ## Note that this comment and code below are not correctly indentend voluntarily in order to generate nicely formatted
 ## code at runtime!
-#macro(removeJsSuffix $url)#if (!$url.contains('?'))$stringtool.removeEnd($url, '.js'))#else$url#{end}#end
+#macro(removeJsSuffix $expr)
+## Note that velocity takes argument references by name (see: https://velocity.apache.org/engine/releases/velocity-1.5/user-guide.html#velocimacros).
+## So we set the value of the $expr in the $url variable to not execute $expr multiple times.
+#set ($url = $expr)
+#if (!$url.contains('?'))$stringtool.removeEnd($url, '.js'))#else$url#{end}
+#end
 ##
 ## Start the requirejs config.
 ##
