XWIKI-11115: The skin should not use checkAccess to determine which menu items to show Fixed

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/menuview.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/menuview.vm
@@ -288,9 +288,9 @@
 ##
 ## Page
 ##
-#set ($canView = !$doc.isNew() && $xwiki.checkAccess($doc.fullName, 'view'))
+#set ($canView = !$doc.isNew() && $xwiki.hasAccessLevel('view'))
 #set ($canCopy = $canView && $hasCreatePage)
-#set ($canDelete = !$doc.isNew() && $xwiki.checkAccess($doc.fullName, 'delete'))
+#set ($canDelete = !$doc.isNew() && $xwiki.hasAccessLevel('delete'))
 #set ($canShare = $canView && $xwiki.exists('XWiki.SharePage') && !$isGuest)
 #set ($canWatch = !$doc.isNew() && $hasWatch)
 #set ($displayPageSubmenu = $canWatch || $canShare || $canCopy || $canDelete)
