--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus_page.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus_page.vm
@@ -1,9 +1,9 @@
 ##################################
 ##          PAGE MENU
 ##################################
-#set ($canView = !$doc.isNew() && $xwiki.checkAccess($doc.fullName, 'view'))
+#set ($canView = !$doc.isNew() && $xwiki.hasAccessLevel('view'))
 #set ($canCopy = $canView && $hasCreatePage)
-#set ($canDelete = !$doc.isNew() && $xwiki.checkAccess($doc.fullName, 'delete'))
+#set ($canDelete = !$doc.isNew() && $xwiki.hasAccessLevel('delete'))
 #set ($canWatch = !$doc.isNew() && $hasWatch)
 #set ($displayPageSubmenu = $canWatch || $canCopy || $canDelete)
 #xwikitopmenuseparator()
