XWIKI-11050: Do not fail the UI when there's a problem rendering the document's content * Renamed #displayException into #displayUnexpectedException * Introduced new #displayException this is more generic and that takes 2 params: title and exception

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/contentview.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/contentview.vm
@@ -54,7 +54,7 @@
   ## ----------------------------
   <div id="xwikicontent">
     #if ("$!exception" != '')
-      #displayException($exception)
+      #displayUnexpectedException($exception)
     #else
       $renderedContent
     #end
