--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/macros.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/macros.vm
@@ -2541,15 +2541,26 @@ Recursive title display detected!##
 #end
 
 ###
-### Displays an unexpectd exception.
+### Displays an exception.
+###
+### @param title the message to display to the user
+### @param exception the exception to display when the user clicks on the message
+#macro(displayException $title $exception)
+<div class="xwikirenderingerror" title="Click to get more details about the error" style="cursor: pointer;">
+  $title
+</div>
+<div class="xwikirenderingerrordescription hidden">
+  <pre>$exceptiontool.getStackTrace($exception)</pre>
+</div>
+#end
+
+###
+### Displays an unexpected exception with a default message.
 ###
 ### @param exception The exception to format for displaying
-#macro(displayException $exception)
-  <div class="xwikirenderingerror" title="Click to get more details about the error" style="cursor: pointer;">
-    Unexpected error. Contact your administrator or <a href="http://jira.xwiki.org">report the issue</a>.
-    Click this box to get technical details.
-  </div>
-  <div class="xwikirenderingerrordescription hidden">
-    <pre>$exceptiontool.getStackTrace($exception)</pre>
-  </div>
+#macro(displayUnexpectedException $exception)
+  #set ($sentence1 = 'Unexpected error.')
+  #set ($sentence2 = 'Contact your administrator or <a href="http://jira.xwiki.org">report the issue</a>.')
+  #set ($sentence3 = 'Click this box to get technical details.')
+  #displayException("${sentence1} ${sentence2} ${sentence3}", $exception)
 #end
