--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/contentview.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/contentview.vm
@@ -46,7 +46,7 @@ $xcontext.dropPermissions()
 ## ----------------------------
 <div id="xwikicontent">
   #if ("$!exception" != '')
-    #displayException($exception)
+    #displayUnexpectedException($exception)
   #else
     $renderedContent
   #end
