XWIKI-11124: Flamingo badly extending .checkbox class for input[type='checkbox'] elements
(cherry picked from commit e53da425931c105d587ca3bb9ea8d4c0477f3db9)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/forms.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/forms.less
@@ -16,8 +16,8 @@ select.input-lg, input[type="text"].input-lg, input[type="password"].input-lg {
   .input-lg;
 }
 
-input[type="radio"]:extend(.radio all), 
-input[type="checkbox"]:extend(.checkbox all) {
+input[type="radio"], 
+input[type="checkbox"] {
   display: inline-block;
   margin-right: (@padding-base-horizontal / 2);
 }
