XWIKI-11103: jldap size limit exceeded

--- a/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.cfg.vm
+++ b/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.cfg.vm
@@ -527,6 +527,10 @@ xwiki.authentication.ldap.trylocal=1
 #-# The default is 1000
 # xwiki.authentication.ldap.timeout=1000
 
+#-# [Since 6.3M1, XWikiLDAPAuthServiceImpl]
+#-# The maximum number of search results to be returned from a search operation.
+#-# The default is 1000
+# xwiki.authentication.ldap.maxresults=1000
 
 #---------------------------------------
 # WYSIWYG Editor configuration
