XWIKI-11105: Links to inexistent pages not marked anymore
- Fixing selector

(cherry picked from commit 95e8623b883476b981f30c1c902217f92359c781)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/general.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/general.less
@@ -34,11 +34,9 @@ table {
 
 // Links ======================================================================
 
-.wikicreatelink a { /* Non-exiting links */
-  span {
-    text-decoration: underline;
-  }
-  &:after { /* Mark with a rounded question mark */
+.wikicreatelink { /* Non-exiting links */
+  text-decoration: underline;
+  a:after { /* Mark with a rounded question mark */
     background-color: @link-color;
     border-radius: 8px;
     color: @xwiki-page-content-bg;
