XWIKI-10745: Improve the display of available languages in Flamingo.
* Display the current language in the top bar if multilingual=1
* Also remove the .hasIcon CSS class which is actually useless in Flamingo

(cherry picked from commit afaae044f3385aab6871f73b2ca295cd5e8d75ad)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/action-menus.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/action-menus.less
@@ -8,7 +8,7 @@
     border: 0;
     margin-bottom: 0;
     @padding-value: ceil(@navbar-padding-horizontal / 2);
-    .hasIcon, .hasCaret {
+    ul.navbar-nav > li > a {
       display: inline-block;
       padding-left: @padding-value; 
       padding-right: @padding-value;
