--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus_view.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus_view.vm
@@ -9,6 +9,7 @@
     
     ## Right menu
     #xwikitopmenurightstart()
+      #template("menus_language.vm")
       #template("menus_user.vm")
     #xwikitopmenurightend()
     
