XWIKI-11140: Empty lines are not visually displayed
(cherry picked from commit e176b3791e849d3b181ef81a44624bb068605479)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/general.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/general.less
@@ -32,7 +32,7 @@ table {
   }
 }
 
-// Links ======================================================================
+// Rendering ==================================================================
 
 .wikicreatelink { /* Non-exiting links */
   text-decoration: underline;
@@ -47,6 +47,10 @@ table {
     padding: 0 4px;
     text-decoration: none;
   }
+}
+
+.wikimodel-emptyline {
+  height: 1em;
 }
 
 // Avatars ====================================================================
