XWIKI-10727: Make Livetables responsive with screen size.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/style.less.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/style.less.vm
@@ -17,6 +17,7 @@
 @import "grid";
 @import "headers";
 @import "layout";
+@import "livetable";
 @import "messages";
 @import "misc";
 @import "panels";
