XWIKI-11034: Use LESS4J for the implementation of LESSCompiler.
* Introduce a configuration to either use the JavaScript compiler or LESS4j

--- a/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.properties.vm
+++ b/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.properties.vm
@@ -697,4 +697,14 @@ rendering.transformations = $xwikiRenderingTransformations
 # mail.sender.properties = mail.smtp.starttls.enable = true
 # mail.sender.properties = mail.smtp.socks.host = someserver
 
+#-------------------------------------------------------------------------------------
+# LESS
+#-------------------------------------------------------------------------------------
+
+#-# [Since 6.3M1]
+#-# LESS CSS compiler to use. Valid values are:
+#-# - "javascript" : to use the official LESS compiler.
+#-# - "less4j" : (default) to use a Java version of LESS which has better performances.
+# less.compiler =
+
 $!xwikiPropertiesAdditionalProperties
