XWIKI-10887: "Retrieve username" and "Reset password" buttons are not aligned with the "Username" and "Email" fields
(cherry picked from commit c405843ac340065aba02799cc5c512b438ea8d6f)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/forms.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/forms.less
@@ -97,9 +97,14 @@ select[size="0"], select[size="1"] {
   }
 }
 
-.xformInline label {
-  text-transform: uppercase;
-  margin-right: 0.5em;
+.xformInline {
+  label {
+    text-transform: uppercase;
+    margin-right: 0.5em;
+  }
+  input {
+    vertical-align: middle;
+  }
 }
 
 .xwiki-form-listclass {
